<resources>
    <string name="app_name">Mobile Logbook</string>
    <string name="app_name_rentalz"> RentalZ</string>
    <string name="app_subtitle">Apartment Rent Platform</string>

    <!-- Create Form-->
    <string name="shr_hint_property_type">*Property type</string>
    <string name="shr_hint_bedrooms">*Bedrooms</string>
    <string name="shr_hint_date_time">*Date &amp; time</string>
    <string name="shr_hint_monthly_price">*Monthly price</string>
    <string name="shr_hint_furniture_type">Furniture</string>
    <string name="shr_hint_note">Notes</string>
    <string name="shr_hint_name">*Reporters Name</string>

    <!-- Radio group -Furniture -->
    <string name="rb_furnished">Furnished</string>
    <string name="rb_unfurnished">Unfurnished</string>
    <string name="rb_part_furnished">Part-furnished</string>

    <!-- Button -->
    <string name="m_btn_submit">Submit</string>

    <!-- Validation Information before Submit-->
    <string name="validate_information_error">You need fill out this fields.</string>
    <string name="validate_empty_fields">Empty fields!!! You need to fill out the required fields.</string>

    <!-- Material Alert Dialog-->
    <string name="message_alert_dialog_txt">Are you sure you want submit these information?</string>
    <string name="title_alert_dialoc_txt">Confirm Information</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">Cancel</string>
    <string name="successful_submit_toast_txt">Your information submitted successful</string>
    <string name="failure_submit_toast_txt"> Your information submitted fail</string>
    <string name="txt_info">The information that entered form keyboard</string>

    <!-- property array-->
    <string-array name="property">
        <item>House</item>
        <item>Apartment</item>
        <item>Flat</item>
        <item>Bungalow</item>
    </string-array>

    <!-- bedrooms array-->
    <string-array name="bedrooms">
        <item>Studio</item>
    </string-array>

</resources>